[package]
name = "spacehaven_multitool"
authors = ["nuttyCream <issanutty@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts",
    "glow"
] }

sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tokio = "1.27.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# fast and small wasm
[profile.release] 
opt-level = "z"
debug = false
rpath = false
lto = true
codegen-units = 1
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
