[package]
name = "spacehaven_multitool"
authors = ["nuttyCream <issanutty@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.22.0", features = ["image"]}

serde = { version = "1", features = ["derive"] }

log = "0.4.17"
once_cell = "1.17.1"
steamlocate = "1.2.0"
amxml = "0.5.3"
rectangle-pack = "0.4.2"
zip = "0.6.4"
toml = "0.7.3"
byteorder = "1.4.3"
md5 = "0.7.0"
flate2 = "1.0.26"
image = "0.24.6"
indexmap = "1.9.3"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"


# fast and small wasm
[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
codegen-units = 1
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev]
opt-level = 2
incremental = true
debug = true
lto = false
codegen-units = 256
rpath = false
